refactor(tests): Clean up integration tests and improve logging